CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT( HMDIrrlicht )

ADD_SUBDIRECTORY( lib/libovr )
ADD_SUBDIRECTORY( lib/irrlicht )

IF(NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY )
	SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin" )
ENDIF(  )

ADD_DEFINITIONS(-DUNICODE -D_UNICODE)

INCLUDE_DIRECTORIES( lib/irrlicht/include )

FILE( GLOB HMD_HEADERS *.h )
FILE( GLOB HMD_SOURCES *.cpp )

SOURCE_GROUP( src FILES 
	${HMD_HEADERS} 
	${HMD_SOURCES} )
	
ADD_EXECUTABLE(HMDIrrlicht
	${HMD_HEADERS} 
	${HMD_SOURCES} )
	
TARGET_LINK_LIBRARIES( HMDIrrlicht LibOVR irrlicht_shared )
ADD_DEPENDENCIES( HMDIrrlicht LibOVR irrlicht_shared )

